# my-blog

./: .dockerignore  .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile-dev  docker-cloud.yml  docker-compose.yml
.docker/caddy/: Caddyfile  Caddyfile.prod  Dockerfile
.docker/rust/: .dockerignore  Dockerfile
db/: seed.sql
migrations/2018-02-11-092857_create_authors/: down.sql  up.sql
migrations/2018-03-03-224142_create_categories/: down.sql  up.sql
migrations/2018-03-04-161556_create_posts/: down.sql  up.sql
migrations/2018-03-11-093545_create_category_post/: down.sql  up.sql
src/: category.rs  db.rs  main.rs  post.rs  schema.rs  static_files.rs
static/css/: core.css
templates/: about.html.tera  base.html.tera  category.html.tera  index.html.tera  post.html.tera
templates/partials/post/: list.html.tera
