[package]
name = "myblog"
version = "0.1.0"
authors = ["Diego Cabrejas <dcabrejas@icloud.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
diesel = { version = "1.1", features = ["mysql", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.11.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
